<resources>
    <string name="all_appname">Random Picture</string>
    <string name="all_ok">OK</string>
    <string name="all_yes">YES</string>
    <string name="all_no">NO</string>

    <string name="permissionalert_opensetting">Open Setting</string>
    <string name="capturescreen_permissionrationale">In order to capture image we need camera and storage permission</string>
    <string name="capturescreen_permissiondeny">Open Settings, then tap Permissions and turn camera and storage permission</string>
    <string name="permissiondialog_nosettingintent">Unable to open setting</string>

    <string name="publishscreen_publishbutton">Publish</string>
    <string name="publishscreen_erroremptycaption">Empty Caption</string>
    <string name="publishscreen_captionhint">Caption</string>
    <string name="navigationheader_login">Log in</string>
    <string name="loginfragment_title">Log In</string>
    <string name="loginfragment_loginbutton">Login</string>
    <string name="loginfragment_registerbutton">No account yet? Create one</string>
    <string name="signupscreen_emailhint">Email</string>
    <string name="singupscreen_passwordhint">Password</string>
    <string name="signupscreen_erroremptyemail">Empty Email</string>
    <string name="signupscreen_erroremptypassword">Empty Password</string>
    <string name="signupscreen_errorinvalidemail">Invalid Email</string>
    <string name="registerscreen_reenterpasswordhint">Re-enter password</string>
    <string name="registerscreen_registerbutton">Sign Up</string>
    <string name="registerscreen_erroremptyname">Empty Name</string>
    <string name="registerscreen_erroremptyconfirmationpassword">Empty Password Conformation</string>
    <string name="registerscreen_errorpasswordmismatch">Password Mismatch</string>
    <string name="navigationdrawer_menulogout">Log Out</string>
    <string name="dialog_logoutconfirmation">Are you sure want to log out</string>
    <string name="signupscreen_namehint">Name</string>
</resources>
